# ChatNote

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: s1-005-raw-store-claim-ledger-schema.md  s1-005-schema-v1.sql  s1-009-claim-extraction-prompt-contract.md  s1-011-citation-support-v1.sql  s1-012-raw-extraction-output-v1.sql
src/chatnote/: __init__.py  capture.py  citation.py  cli.py  extraction_contract.py  html_dom.py  llm_extractor.py  models.py  parser.py  pipeline.py  queries.py  store.py  url_validation.py
tests/: test_citation.py  test_cli.py  test_extraction_contract.py  test_llm_extractor.py  test_parser.py  test_pipeline.py  test_queries.py  test_schema_contract.py  test_store.py  test_url_validation.py
tests/fixtures/: claude_share_api_snapshot.json  claude_share_rendered.html  claude_share_structured.html  extraction_output_valid.json  ledger_raw_snapshot.json  ledger_transcript.json
