[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatnote"
version = "0.1.0"
description = "Local-first capture tooling for Claude shared chat snapshots."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
chatnote = "chatnote.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
